--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scrollspy": "^3.4.3",
+    "react-sticky-el": "^2.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
